Compilation_Racket_Mips/piton/tests/errors/duplicate_params.py
def a(b: int, b: int) -> int: return a + b